nodejs/versioned_docs/version-1.20/api/class-framelocator.mdx
---
id: class-framelocator
title: "FrameLocator"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

FrameLocator represents a view to the `iframe` on the page. It captures the logic sufficient to retrieve the `iframe` and locate elements in that iframe. FrameLocator can be created with either [page.frameLocator(selector)](./api/class-page.mdx#page-frame-locator) or [locator.frameLocator(selector)](./api/class-locator.mdx#locator-frame-locator) method.

```js
const locator = page.frameLocator('#my-frame').locator('text=Submit');
await locator.click();
```

**Strictness**

Frame locators are strict. This means that all operations on frame locators will throw if more than one element matches given selector.

```js
// Throws if there are several frames in DOM:
await page.frameLocator('.result-frame').locator('button').click();

// Works because we explicitly tell locator to pick the first frame:
await page.frameLocator('.result-frame').first().locator('button').click();
```

**Converting Locator to FrameLocator**

If you have a [Locator] object pointing to an `iframe` it can be converted to [FrameLocator] using [`:scope`](https://developer.mozilla.org/en-US/docs/Web/CSS/:scope) CSS selector:

```js
const frameLocator = locator.frameLocator(':scope');
```


- [frameLocator.first()](./api/class-framelocator.mdx#frame-locator-first)
- [frameLocator.frameLocator(selector)](./api/class-framelocator.mdx#frame-locator-frame-locator)
- [frameLocator.last()](./api/class-framelocator.mdx#frame-locator-last)
- [frameLocator.locator(selector[, options])](./api/class-framelocator.mdx#frame-locator-locator)
- [frameLocator.nth(index)](./api/class-framelocator.mdx#frame-locator-nth)

## frameLocator.first() {#frame-locator-first}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-first-return"/> &#60;[FrameLocator]&#62;<a href="#frame-locator-first-return" class="list-anchor">#</a>

Returns locator to the first matching frame.

## frameLocator.frameLocator(selector) {#frame-locator-frame-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-frame-locator-option-selector"/> &#60;[string]&#62; A selector to use when resolving DOM element. See [working with selectors](./selectors.mdx) for more details.<a href="#frame-locator-frame-locator-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-frame-locator-return"/> &#60;[FrameLocator]&#62;<a href="#frame-locator-frame-locator-return" class="list-anchor">#</a>

When working with iframes, you can create a frame locator that will enter the iframe and allow selecting elements in that iframe.

## frameLocator.last() {#frame-locator-last}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-last-return"/> &#60;[FrameLocator]&#62;<a href="#frame-locator-last-return" class="list-anchor">#</a>

Returns locator to the last matching frame.

## frameLocator.locator(selector[, options]) {#frame-locator-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-locator-option-selector"/> &#60;[string]&#62; A selector to use when resolving DOM element. See [working with selectors](./selectors.mdx) for more details.<a href="#frame-locator-locator-option-selector" class="list-anchor">#</a>
- `options` &#60;[Object]&#62;
  - `has`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-locator-option-has"/> &#60;[Locator]&#62; Matches elements containing an element that matches an inner locator. Inner locator is queried against the outer one. For example, `article` that has `text=Playwright` matches `<article><div>Playwright</div></article>`.<a href="#frame-locator-locator-option-has" class="list-anchor">#</a>

    Note that outer and inner locators must belong to the same frame. Inner locator must not contain [FrameLocator]s.
  - `hasText`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-locator-option-has-text"/> &#60;[string]|[RegExp]&#62; Matches elements containing specified text somewhere inside, possibly in a child or a descendant element. For example, `"Playwright"` matches `<article><div>Playwright</div></article>`.<a href="#frame-locator-locator-option-has-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-locator-return"/> &#60;[Locator]&#62;<a href="#frame-locator-locator-return" class="list-anchor">#</a>

The method finds an element matching the specified selector in the FrameLocator's subtree.

## frameLocator.nth(index) {#frame-locator-nth}
- `index`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-nth-option-index"/> &#60;[number]&#62;<a href="#frame-locator-nth-option-index" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="frame-locator-nth-return"/> &#60;[FrameLocator]&#62;<a href="#frame-locator-nth-return" class="list-anchor">#</a>

Returns locator to the n-th matching frame.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./api/class-apiresponseassertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./api/class-screenshotassertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
